<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.zhaoqi.libraryapp.ScanBookActivity">

    <Button
        android:id="@+id/borrowButton"
        android:layout_width="124dp"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/returnButton"
        android:layout_alignBottom="@+id/returnButton"
        android:layout_alignEnd="@+id/read_barcode"
        android:layout_alignRight="@+id/read_barcode"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/borrow"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addButton2" />

    <TextView
        android:id="@+id/barcode_value3"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_below="@+id/status_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/barcode_header"
        android:textAppearance="?android:attr/textAppearanceLarge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barcode_value3" />

    <Button
        android:id="@+id/read_barcode"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="236dp"
        android:layout_marginTop="16dp"
        android:text="@string/read_barcode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <CheckBox
        android:id="@+id/use_flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/read_barcode"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="36dp"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:text="@string/use_flash"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/read_barcode" />

    <Button
        android:id="@+id/returnButton"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_above="@+id/use_flash"
        android:layout_alignLeft="@+id/use_flash"
        android:layout_alignStart="@+id/use_flash"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/return_book"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/borrowButton" />

    <Button
        android:id="@+id/addButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/borrowButton"
        android:layout_alignBottom="@+id/borrowButton"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_toLeftOf="@+id/read_barcode"
        android:layout_toStartOf="@+id/read_barcode"
        android:text="@string/add_item"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barcode_value3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Book Name"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status_message" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:layout_below="@+id/editText"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Author"
        android:inputType="textPersonName"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_above="@+id/borrowButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.843"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="379dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.937"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.017" />

</android.support.constraint.ConstraintLayout>